--- a/public/pages/seminar.ejs
+++ b/public/pages/seminar.ejs
@@ -8,8 +8,8 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Performers</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/seminars">Seminars</a></li>
+            <li id="seminarName" class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
         </ol>
     </nav>
 
@@ -19,10 +19,11 @@
             <div class="col-10 col-md-8 col-lg-6">
                 <div class="card">
                     <div class="card-header centralized">
-                        <h1 id="seminarNameH1" class="title"></h1>
+                        <h1 id="seminarNameH1" class="title"></h1>                        
                     </div>
                     <div class="card-body">
                         <hr class="line">
+                        <h3 class="title">Discussed events:</h3>
                         <div id="eventsBox">
                             
                         </div>
