--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -37,12 +37,32 @@ h1.home-img-text {
     #main-txt {
         margin-top: -200px;
     }
+
+    #main-txt h2 {
+        font-size: 30px;
+    }
+
+    #main-txt h1 {
+        font-size: 40px;
+    }
 }
 
 @media (min-width: 768px) {
     #main-img {
         height: 800px;
         width: 768px;
+    }
+
+    #main-txt {
+        margin-top: -300px;
+    }
+
+    #main-txt h2 {
+        font-size: 40px;
+    }
+
+    #main-txt h1 {
+        font-size: 50px;
     }
 }
 
@@ -51,5 +71,13 @@ h1.home-img-text {
         margin-top: -16px;
         height: 900px;
         width: 1520px;
+    }
+
+    #main-txt h2 {
+        font-size: 50px;
+    }
+
+    #main-txt h1 {
+        font-size: 60px;
     }
 }
