--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -35,8 +35,7 @@
                 </li>
             </ul>
         </div>
-        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="signup-btn" href="/registration"><span
-                style="margin-left: 6px;">SignUp</span></a>
-        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn" href="/login"><span
-                style="margin-left: 6px;">Login</span></a>
+        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="signup-btn"
+            href="/registration"><span></span>SignUp</span></a>
+        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn" href="/login"><span>Login</span></a>
     </nav>
