--- a/public/assets/css/eventsByType.css
+++ b/public/assets/css/eventsByType.css
@@ -25,13 +25,10 @@
 .s-wrapper {
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 50px;
-    margin-left: 30px;
+    margin-bottom: 30px;
     background-color: black;
     border-radius: 25px;
-    width: 700px;
+    width: 90%;
 }
 
 #last-wrapper {
