--- a/public/assets/css/performerGroup.css
+++ b/public/assets/css/performerGroup.css
@@ -40,9 +40,16 @@
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 30px;
+    text-align: center;
 }
 
 #title-row {
     padding-top: 20px;
     margin-top: 70px;
+}
+
+@media (max-width: 500px) {
+    .wrapper {
+        width: 300px;
+    }
 }
