--- a/public/pages/seminars.ejs
+++ b/public/pages/seminars.ejs
@@ -15,12 +15,10 @@
         </ol>
     </nav>
 
-    <div class="row">
-        <div class="col"></div>
-        <div id="container" class="col">
+    <div class="d-flex flex-row justify-content-center">
+        <div id="container" class="container">
 
         </div>
-        <div class="col"></div>
     </div>
 
     <%- include('includes/footer.ejs') %>
