--- a/public/assets/css/artisticEvent.css
+++ b/public/assets/css/artisticEvent.css
@@ -17,6 +17,7 @@
 .carousel-item {
     background-image: url(../images/chicago.jpg);
     height: 86vh;
+
 }
 
 /* featuring section */
@@ -26,7 +27,6 @@
     border: solid 2px wheat;
     background-color: rgb(12, 11, 11);
     border-radius: 15px;
-    width: 800px;
 }
 
 .artist-box {
@@ -63,9 +63,27 @@
     cursor: pointer;
 }
 
+@media (min-width: 765px) {
+
+    .artist-wrapper {
+        width: 500px;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .artist-wrapper {
+        width: 700px;
+    }
+}
+
 @media (min-width: 1400px) {
     .artist-img:hover {
         height: 230px;
         width: 230px;
+    }
+
+    .artist-wrapper {
+        width: 800px;
     }
 }
