--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -27,9 +27,9 @@
                 <h2 class="title">Were can you find us?</h2>
             </div>
             <div class="d-flex flex-row justify-content-center">
-                <h5 class="answer">The event is going to take place in Ocean Drive, Miami, Florida. The event is going
-                    to take place in
-                    Ocean Drive, Miami, Florida.</h5>
+                <h5 class="answer">The event is going to take place in Ocean Drive, Miami, Florida. The whole street is
+                    going to be dedicated to the festival and you'll find numerous info points from which you can pick
+                    up maps to better orientate while visiting.</h5>
             </div>
             <div class="d-flex flex-row justify-content-center">
                 <h2 class="title">How can you get the tickets for the event?</h2>
@@ -38,10 +38,8 @@
                 <h5 class="answer">To book the tickets you need to register on the site <a
                         href="/registration">here</a>. Then you can select the event you want from the <a
                         href="/calendar">Calendar page</a> and click on the button GET YOUR TICKET. <br>
-                    You can than see your tickets in the <a href="/reservation">Reservation page</a><br>
-                    The event is
-                    going to take
-                    place in Ocean Drive, Miami, Florida.</h5>
+                    You can than see your tickets in the <a href="/reservation">Reservation page</a><br> The event is
+                    going to take place in Ocean Drive, Miami, Florida.</h5>
             </div>
         </div>
     </div>
