--- a/public/pages/login.ejs
+++ b/public/pages/login.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/login.css">
-    <title>Home Page</title>
+<link rel="stylesheet" href="/css/login.css">
+<title>Home Page</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
         </ol>
     </nav>
 
-    <div class="container" style="padding-top: 40px; padding-bottom: 20px; margin-bottom: 123px;">
+    <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
                 <div class="card-header black-card">
@@ -46,7 +46,7 @@
                             href="/registration">Sign
                             Up</a>
                     </div>
-                </div>                
+                </div>
             </div>
         </div>
     </div>
