--- a/public/pages/registration.ejs
+++ b/public/pages/registration.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/login.css">
-    <title>Registration Page</title>
+<link rel="stylesheet" href="/css/login.css">
+<title>Registration Page</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
         </ol>
     </nav>
 
-    <div class="container" style="padding-top: 40px; padding-bottom: 20px; margin-bottom: 45px;">
+    <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
                 <div class="card-header black-card">
@@ -49,7 +49,8 @@
                 </div>
                 <div class="card-footer black-card">
                     <div class="d-flex justify-content-center links">
-                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="/login" class="card-link">
+                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="/login"
+                            class="card-link">
                             Log&nbsp;in!</a>
                     </div>
                 </div>
@@ -58,8 +59,8 @@
     </div>
 
     <%- include('includes/footer.ejs') %>
-    <script src ="/js/script.js"></script>
-    <script src = "/js/registration.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/registration.js"></script>
 </body>
 
 </html>
