--- a/public/pages/contactUs.ejs
+++ b/public/pages/contactUs.ejs
@@ -33,8 +33,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <textarea name="txtMsg" class="form-control" placeholder="Your Message *"
-                            style="width: 100%; height: 150px;"></textarea>
+                        <textarea id="msg-form" name="txtMsg" class="form-control"
+                            placeholder="Your Message *"></textarea>
                     </div>
                 </div>
             </div>
