--- a/public/pages/company.ejs
+++ b/public/pages/company.ejs
@@ -33,8 +33,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <div id="performersContainer" class="d-flex flex-row justify-content-center">
+
+                    <div class="card-body centralized">
+                        <div id="performersContainer" class="row justify-content-center">
+
 
                         </div>
                     </div>
