--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -35,7 +35,6 @@
                 </li>
             </ul>
         </div>
-        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="signup-btn"
-            href="/registration"><span></span>SignUp</span></a>
-        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn" href="/login"><span>Login</span></a>
+        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="signup-btn" href="/registration">SignUp</a>
+        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn" href="/login">Login</a>
     </nav>
