--- a/public/pages/login.ejs
+++ b/public/pages/login.ejs
@@ -8,7 +8,8 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item bc-active" aria-current="page">Home</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Login</li>
         </ol>
     </nav>
 
