--- a/public/pages/performer.ejs
+++ b/public/pages/performer.ejs
@@ -15,7 +15,7 @@
 
     <div id="main-container" class="container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col-1 col-md-2 col-lg-3"></div>
             <div class="col-10 col-md-8 col-lg-6">
                 <div class="card">
                     <div class="card-header">
