--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -15,12 +15,14 @@
         </ol>
     </nav>
 
-    <div class="col"></div>
-    <div class="col">
-        <div id="container" class="row justify-content-center">
-        </div>
+    <div class="row">
+        <div class="col-1 col-md-2 col-lg-3"></div>
+            <div class="col-10 col-md-8 col-lg-6">  
+                <div id="container" class="justify-content-center">
+                </div>
+            </div>
+        <div class="col-1 col-md-2 col-lg-3"></div>
     </div>
-    <div class="col"></div>
 
 
     <%- include('includes/footer.ejs') %>
