--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -38,14 +38,15 @@
                 <h5 class="answer">To book the tickets you need to register on the site <a
                         href="/registration">here</a>. Then you can select the event you want from the <a
                         href="/calendar">Calendar page</a> and click on the button GET YOUR TICKET. <br>
-                    You can than see your tickets in the <a href="/reservation">Reservation page</a><br> The event is
+                    You can then see your tickets in the <a id="link" href="/reservations">Reservation page</a><br> The event is
                     going to take place in Ocean Drive, Miami, Florida.</h5>
             </div>
         </div>
     </div>
 
     <%- include('includes/footer.ejs') %>
-
+    <script src="/js/script.js"></script>
+    <script src="/js/reservationInfo.js"></script>
 </body>
 
 </html>
