--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -35,8 +35,8 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col"></div>
-            <div class="col">
+            <div class="col-1"></div>
+            <div class="col-10">
                 <div class="centralized artist-wrapper">
                     <h2 class="wheat-item">Featuring:</h2>
                     <div id="featuringBox" class="row d-flex justify-content-center">
@@ -44,12 +44,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-1"></div>
         </div>
 
         <div class="row">
-            <div class="col"></div>
-            <div class="col">
+            <div class="col-1"></div>
+            <div class="col-10">
                 <div class="centralized artist-wrapper">
                     <h2 class="wheat-item">Other Events The Same Day:</h2>
                     <div id="eventsContainer" class="row d-flex justify-content-center">
@@ -57,15 +57,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-1"></div>
         </div>
 
         <div class="row">
-            <div class="col"></div>
-            <div id="seminarContainer" class="col">
+            <div class="col-1"></div>
+            <div id="seminarContainer" class="seminarContainer col-10">
 
             </div>
-            <div class="col"></div>
+            <div class="col-1"></div>
         </div>
 
         <div class="row">
