--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -8,7 +8,7 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
             <li id="breadCrumbName" class="breadcrumb-item bc-active" aria-current="page"></li>
         </ol>
     </nav>
