--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -61,16 +61,16 @@
         </div>
 
         <div class="row">
-            <div class="col-1"></div>
-            <div id="seminarContainer" class="seminarContainer col-10">
+            <div class="col"></div>
+            <div id="seminarContainer" class="col">
 
             </div>
-            <div class="col-1"></div>
+            <div class="col"></div>
         </div>
 
         <div class="row">
-            <div class="col"></div>
-            <div class="col-8">
+            <div class="col-1"></div>
+            <div class="col-10">
                 <div class="abstract centralized">
                     <h3>Details on This Event</h3>
                     <p id="abstract">
@@ -78,12 +78,12 @@
                     </p>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-1"></div>
         </div>
 
         <div class="row">
-            <div class="col"></div>
-            <div class="col-8 align-items-center">
+            <div class="col-1"></div>
+            <div class="col-10 align-items-center">
                 <div class="card">
                     <div id="q0" class="card-header" panel-id="question-0">Panel Heading</div>
                     <div id="question-0" class="card-body collapse">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-1"></div>
         </div>
         <div id="bottomContainer" class="row">
 
