--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -16,69 +16,55 @@
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img id="img1" class="d-block w-100" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img id="img2" class="d-block w-100" alt="Second slide">
-          </div>
+            <div class="carousel-item active">
+                <img id="img1" class="d-block w-100" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img id="img2" class="d-block w-100" alt="Second slide">
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
         </a>
-      </div>
+    </div>
 
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <div class="centralized artist-wrapper">
-                    <h2 class="wheat-item">Featuring:</h2>
-                    <div id="featuringBox" class="row d-flex justify-content-center">
+        <div class="d-flex flex-row justify-content-center">
+            <div class="centralized artist-wrapper">
+                <h2 class="wheat-item">Featuring:</h2>
+                <div id="featuringBox" class="row d-flex justify-content-center">
 
-                    </div>
                 </div>
             </div>
-            <div class="col-1"></div>
         </div>
 
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <div class="centralized artist-wrapper">
-                    <h2 class="wheat-item">Other Events The Same Day:</h2>
-                    <div id="eventsContainer" class="row d-flex justify-content-center">
+        <div class="d-flex flex-row justify-content-center">
+            <div class="centralized artist-wrapper">
+                <h2 class="wheat-item">Other Events The Same Day:</h2>
+                <div id="eventsContainer" class="row d-flex justify-content-center">
 
-                    </div>
                 </div>
             </div>
-            <div class="col-1"></div>
         </div>
 
-        <div class="row">
-            <div class="col"></div>
-            <div id="seminarContainer" class="col">
+        <div class="d-flex flex-row justify-content-center">
+            <div id="seminarContainer">
 
             </div>
-            <div class="col"></div>
         </div>
 
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <div class="abstract centralized">
-                    <h3>Details on This Event</h3>
-                    <p id="abstract">
+        <div class="d-flex flex-row justify-content-center">
+            <div class="abstract centralized">
+                <h3>Details on This Event</h3>
+                <p id="abstract">
 
-                    </p>
-                </div>
+                </p>
             </div>
-            <div class="col-1"></div>
         </div>
 
         <div class="row">
