--- a/public/pages/company.ejs
+++ b/public/pages/company.ejs
@@ -63,24 +63,18 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-8">
-                <div class="description-wrapper centralized">
-                    <h2 id="moreAbout" class="title-dark"></h2>
-                    <p id="description">
-                    </p>
-                </div>
+        <div class="d-flex flex-row justify-content-center">
+            <div class="description-wrapper centralized">
+                <h2 id="moreAbout" class="title-dark"></h2>
+                <p id="description">
+                </p>
             </div>
-            <div class="col"></div>
         </div>
 
-        <div class="row">
+        <div class="d-flex flex-row justify-content-center">
             <div class="centralized event-wrapper">
                 <h2 id="findAuthor" class="title"></h2>
-                <div id="" class="row d-flex justify-content-center">
-                    <div id="eventsContainer" class="row justify-content-center">
-                    </div>
+                <div id="eventsContainer" class="row justify-content-center">
                 </div>
             </div>
         </div>
