--- a/public/assets/css/artisticEvent.css
+++ b/public/assets/css/artisticEvent.css
@@ -62,6 +62,11 @@
     cursor: pointer;
 }
 
+.orange-title {
+    color: orange;
+    margin: 0 2%;
+}
+
 @media (max-width: 600px) {
 
     .carousel-item {
