add seminar desc

--- a/public/pages/seminar.ejs
+++ b/public/pages/seminar.ejs
@@ -20,6 +20,7 @@
                 <div class="card">
                     <div class="card-header centralized">
                         <h1 id="seminarNameH1" class="title"></h1>
+                        <p class="subtitle" id="seminar-desc"></p>
                     </div>
                     <div class="card-body">
                         <hr class="line">
