--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -33,6 +33,11 @@
         </a>
     </div>
 
+    <div class="d-flex titleDiv flex-row justify-content-center">
+        <h1 id="titleLabel" class="Display-1 titleLabel wheat-item">Nome evento</h1>
+    </div>
+    <hr/>
+
     <div class="container">
         <div class="d-flex flex-row justify-content-center">
             <div class="centralized artist-wrapper">
@@ -60,13 +65,14 @@
 
         <div class="d-flex flex-row justify-content-center">
             <div class="abstract centralized">
-                <h3>Details on This Event</h3>
-                <p id="abstract">
+                <h2 class="display-2"> Details on This Event</h3>
+                <p class="abstractLabel" id="abstract">
 
                 </p>
             </div>
         </div>
 
+        <hr/>
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10 align-items-center">
