--- a/public/pages/eventsTypes.ejs
+++ b/public/pages/eventsTypes.ejs
@@ -8,7 +8,7 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Event Types</li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Events' Types</li>
         </ol>
     </nav>
 
