--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -7,7 +7,7 @@
     <%- include('includes/navbar.ejs') %>
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
             <li class="breadcrumb-item bc-active" aria-current="page">Reservation Info</li>
         </ol>
     </nav>
