--- a/public/pages/seminar.ejs
+++ b/public/pages/seminar.ejs
@@ -8,6 +8,7 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/eventsTypes">Events' Types</a></li>
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/seminars">Seminars</a></li>
             <li id="seminarName" class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
         </ol>
