--- a/public/assets/css/company.css
+++ b/public/assets/css/company.css
@@ -132,7 +132,7 @@ a.icoInstagram {
     background-color: black;
     border-radius: 5px;
     border: solid 4px wheat;
-    padding-top: 20px;
+    padding: 20px;
     border-radius: 15px;
 }
 
