--- a/public/assets/css/performer.css
+++ b/public/assets/css/performer.css
@@ -132,7 +132,7 @@ a.icoInstagram {
     background-color: black;
     border-radius: 5px;
     border: solid 4px wheat;
-    padding-top: 20px;
+    padding: 20px;
     border-radius: 15px;
 }
 
@@ -154,4 +154,3 @@ a.icoInstagram {
     width: 160px;
     height: 160px;
 }
-
