--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -33,10 +33,12 @@
         </a>
     </div>
 
-    <div class="d-flex titleDiv flex-row justify-content-center">
-        <h1 id="titleLabel" class="Display-1 titleLabel wheat-item">Nome evento</h1>
+    <div class="container">
+        <div class="d-flex titleDiv flex-row justify-content-center">
+            <h1 id="titleLabel" class="Display-1 titleLabel wheat-item">Nome evento</h1>
+        </div>
     </div>
-    <hr/>
+    <hr />
 
     <div class="container">
         <div class="d-flex flex-row justify-content-center">
@@ -66,13 +68,13 @@
         <div class="d-flex flex-row justify-content-center">
             <div class="abstract centralized">
                 <h2 class="display-2"> Details on This Event</h3>
-                <p class="abstractLabel" id="abstract">
+                    <p class="abstractLabel" id="abstract">
 
-                </p>
+                    </p>
             </div>
         </div>
 
-        <hr/>
+        <hr />
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10 align-items-center">
