--- a/public/pages/contactUs.ejs
+++ b/public/pages/contactUs.ejs
@@ -27,15 +27,17 @@
                         <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *"
                             value="" />
                     </div>
-                    <div class="form-group">
-                        <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
-                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
                         <textarea id="msg-form" name="txtMsg" class="form-control"
                             placeholder="Your Message *"></textarea>
                     </div>
+                </div>
+            </div>
+            <div class="d-flex flex-row justify-content-center">
+                <div class="form-group">
+                    <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
                 </div>
             </div>
         </form>
