--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -8,8 +8,8 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Calendar</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/calendar">Calendar</a></li>
             <li id="breadCrumbName" class="breadcrumb-item bc-active" aria-current="page">Event's Name</li>
         </ol>
     </nav>
@@ -107,10 +107,10 @@
 
         </div>
         <div id="bottomPage"></div>
-        
+
     </div>
     <%- include('includes/footer.ejs') %>
-    
+
     <script src="/js/script.js"></script>
     <script src="/js/artisticEvent.js"></script>
 </body>
