--- a/public/pages/home.ejs
+++ b/public/pages/home.ejs
@@ -6,6 +6,43 @@
 <body>
     <%- include('includes/navbar.ejs') %>
 
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0I3j2ybCOGs?autoplay=1&loop=1&autopause=0" allow=autoplay width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+    
+
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item bc-active" aria-current="page">Home</li>
